# TicTacToe

./: CMakeLists.txt
lib/: CMakeLists.txt
lib/board/: CMakeLists.txt
lib/board/include/: board.h
lib/board/src/: board.cpp
lib/console_manager/: CMakeLists.txt
lib/console_manager/include/: console_manager.h
lib/console_manager/source/: console_manager.cpp
lib/game_engine/: CMakeLists.txt
lib/game_engine/include/: game_engine.h
lib/game_engine/source/: game_engine.cpp
lib/game_manager/: CMakeLists.txt
lib/game_manager/include/: game_manager.h
lib/game_manager/source/: game_manager.cpp
lib/game_types/: CMakeLists.txt
lib/game_types/include/: game_result_type.h
lib/log/: CMakeLists.txt  log.cpp  log.h
lib/player/include/: player.h
lib/playerType/: CMakeLists.txt
lib/playerType/include/: player_type.h
lib/player_bot/: CMakeLists.txt
lib/player_bot/include/: bot_algorithm.h  bot_factory.h  bot_interface.h  bot_random.h  player_bot.h
lib/player_bot/source/: bot_algorithm.cpp  bot_random.cpp  player_bot.cpp
lib/player_interface/: CMakeLists.txt
lib/player_interface/include/: player_interface.h
lib/player_interface/source/: player.cpp
lib/player_manager/: CMakeLists.txt
lib/player_manager/include/: player_manager.h
lib/player_manager/source/: player_manager.cpp
lib/player_type/: CMakeLists.txt
lib/user_interface/: CMakeLists.txt
lib/user_interface/include/: player_host.h  user_interface.h
lib/user_interface/source/: player_host.cpp  user_interface.cpp
source/: main.cpp
src/: main.cpp
